# yubi-bridge

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.py
.github/: release.yml
.github/workflows/: ci.yml  current.yml  debian.yml  release.yml  rpm.yml
debian/: changelog  control  files  postinst  requirements.txt  rules  yubi_bridge.service
yubi-bridge/: __init__.py  client.py  main.py
yubi-bridge/tests/: fixtures.py  test_main.py
yubi_bridge/: __init__.py  client.py  main.py
yubi_bridge/tests/: test_main.py
