[tool.poetry]
name = "yubi-bridge"
version = "0.2.0"
authors = []
description = "YubiKey provisioning tool for DefGuard"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.49.0"
pexpect = "^4.8.0"
protobuf = "4.21.9"
python-gnupg = "^0.5.0"
yubikey-manager = "^4.0.9"
cython = "^3.0.0"
stdeb = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
grpcio-tools = "^1.50.0"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
